tests/ty-var-annot-01/out.txt
error: not a function type: 't22
  ┌─ err.sml:1:37
  │
1 │ fun 'a f (x: 'a) = let val y = x in y false; y end
  │                                     ^^^^^^^

typechecking failed
